# muxtune

./: Dockerfile  README.md  pyproject.toml  requirements.txt
muxtune/: __init__.py  global_envs.py
muxtune/_legacy/: compile.py
muxtune/core/: __init__.py  batched_ops.py  peft_modules.py  utils.py
muxtune/core/data/: __init__.py  aligner.py  mixed_tensor.py  tensors.py
muxtune/core/graph/: __init__.py  compile.py  graph.py  ir.py  partition.py
muxtune/core/modules/: __init__.py  batched_ops.py  graph.py  peft_modules.py  subgraph.py  utils.py
muxtune/datasets/: __init__.py  tokenizer.py
muxtune/models/: __init__.py  utils.py
muxtune/models/adapters/: __init__.py  lora.py
muxtune/models/backbones/: __init__.py  attention.py  layers.py  mlp.py  transformer_block.py  transformer_layer.py
muxtune/models/backbones/gpt/: __init__.py  gpt_model.py
muxtune/training/: __init__.py  optimizer.py  trainer.py  utils.py
muxtune/training/pipeline_parallel/: __init__.py  p2p_communication.py  schedules.py
muxtune/triton/: __init__.py  grouped_gemm.py
scripts/: test_basic.py
